Fix spacing after alternate nested list types

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,12 +49,8 @@
     margin-left: 0px;
   }
 
-  ul,
-  ol,
   ol ul,
-  ul ol,
-  ul ul,
-  ol ol {
+  ul ol {
     margin-bottom: 25px;
   }
 
